updated data analyze

--- a/examples/preprocessing/data_analyze.ipynb
+++ b/examples/preprocessing/data_analyze.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>L0x</th>\n      <th>L0y</th>\n      <th>L0z</th>\n      <th>L1x</th>\n      <th>L1y</th>\n      <th>L1z</th>\n      <th>L2x</th>\n      <th>L2y</th>\n      <th>L2z</th>\n      <th>L3x</th>\n      <th>...</th>\n      <th>L19x</th>\n      <th>L19y</th>\n      <th>L19z</th>\n      <th>L20x</th>\n      <th>L20y</th>\n      <th>L20z</th>\n      <th>a</th>\n      <th>s</th>\n      <th>d</th>\n      <th>f</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>340.000000</td>\n      <td>340.000000</td>\n      <td>340.000000</td>\n      <td>340.000000</td>\n      <td>340.000000</td>\n      <td>340.000000</td>\n      <td>340.000000</td>\n      <td>340.000000</td>\n      <td>340.000000</td>\n      <td>340.000000</td>\n      <td>...</td>\n      <td>340.000000</td>\n      <td>340.000000</td>\n      <td>340.000000</td>\n      <td>340.000000</td>\n      <td>340.000000</td>\n      <td>340.000000</td>\n      <td>340.000000</td>\n      <td>340.000000</td>\n      <td>340.000000</td>\n      <td>340.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>0.719941</td>\n      <td>0.269655</td>\n      <td>-0.000048</td>\n      <td>0.666041</td>\n      <td>0.289558</td>\n      <td>-0.023856</td>\n      <td>0.623224</td>\n      <td>0.334565</td>\n      <td>-0.066522</td>\n      <td>0.597880</td>\n      <td>...</td>\n      <td>0.739939</td>\n      <td>0.458818</td>\n      <td>-0.216369</td>\n      <td>0.728462</td>\n      <td>0.491168</td>\n      <td>-0.230317</td>\n      <td>0.100000</td>\n      <td>0.117647</td>\n      <td>0.111765</td>\n      <td>0.105882</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>0.026315</td>\n      <td>0.013002</td>\n      <td>0.000027</td>\n      <td>0.021412</td>\n      <td>0.011824</td>\n      <td>0.012779</td>\n      <td>0.020904</td>\n      <td>0.011737</td>\n      <td>0.016723</td>\n      <td>0.021477</td>\n      <td>...</td>\n      <td>0.039299</td>\n      <td>0.018307</td>\n      <td>0.022162</td>\n      <td>0.038803</td>\n      <td>0.017378</td>\n      <td>0.029003</td>\n      <td>0.300442</td>\n      <td>0.322665</td>\n      <td>0.315541</td>\n      <td>0.308140</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>0.254978</td>\n      <td>0.242139</td>\n      <td>-0.000172</td>\n      <td>0.305112</td>\n      <td>0.275071</td>\n      <td>-0.058577</td>\n      <td>0.328183</td>\n      <td>0.323878</td>\n      <td>-0.108724</td>\n      <td>0.344311</td>\n      <td>...</td>\n      <td>0.181324</td>\n      <td>0.395153</td>\n      <td>-0.286815</td>\n      <td>0.198124</td>\n      <td>0.410578</td>\n      <td>-0.319444</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>0.718412</td>\n      <td>0.261132</td>\n      <td>-0.000061</td>\n      <td>0.664340</td>\n      <td>0.281764</td>\n      <td>-0.032967</td>\n      <td>0.620321</td>\n      <td>0.328141</td>\n      <td>-0.078453</td>\n      <td>0.593376</td>\n      <td>...</td>\n      <td>0.734270</td>\n      <td>0.451206</td>\n      <td>-0.228388</td>\n      <td>0.718368</td>\n      <td>0.484919</td>\n      <td>-0.247615</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>0.722139</td>\n      <td>0.266039</td>\n      <td>-0.000049</td>\n      <td>0.666489</td>\n      <td>0.285592</td>\n      <td>-0.020605</td>\n      <td>0.621958</td>\n      <td>0.331985</td>\n      <td>-0.062681</td>\n      <td>0.595473</td>\n      <td>...</td>\n      <td>0.746823</td>\n      <td>0.460792</td>\n      <td>-0.217191</td>\n      <td>0.734607</td>\n      <td>0.495038</td>\n      <td>-0.230643</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>0.726273</td>\n      <td>0.276194</td>\n      <td>-0.000036</td>\n      <td>0.668647</td>\n      <td>0.292817</td>\n      <td>-0.014170</td>\n      <td>0.623731</td>\n      <td>0.336765</td>\n      <td>-0.053552</td>\n      <td>0.597932</td>\n      <td>...</td>\n      <td>0.753256</td>\n      <td>0.472142</td>\n      <td>-0.203575</td>\n      <td>0.744149</td>\n      <td>0.501400</td>\n      <td>-0.212657</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>0.733586</td>\n      <td>0.315520</td>\n      <td>0.000039</td>\n      <td>0.726012</td>\n      <td>0.348774</td>\n      <td>0.000405</td>\n      <td>0.726261</td>\n      <td>0.409583</td>\n      <td>-0.033014</td>\n      <td>0.723193</td>\n      <td>...</td>\n      <td>0.768643</td>\n      <td>0.495404</td>\n      <td>-0.094347</td>\n      <td>0.764637</td>\n      <td>0.521641</td>\n      <td>-0.084709</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n    </tr>\n  </tbody>\n</table>\n<p>8 rows × 67 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 62
+     "execution_count": 4
     }
    ],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 64
+     "execution_count": 6
     }
    ],
    "source": [
@@ -168,16 +168,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "          L0x\n",
+       "0    0.722763\n",
+       "1    0.722407\n",
+       "2    0.723790\n",
+       "3    0.727281\n",
+       "4    0.729255\n",
+       "..        ...\n",
+       "335  0.720793\n",
+       "336  0.722729\n",
+       "337  0.722611\n",
+       "338  0.722479\n",
+       "339  0.722524\n",
+       "\n",
+       "[340 rows x 1 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>L0x</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.722763</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0.722407</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0.723790</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0.727281</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0.729255</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>335</th>\n      <td>0.720793</td>\n    </tr>\n    <tr>\n      <th>336</th>\n      <td>0.722729</td>\n    </tr>\n    <tr>\n      <th>337</th>\n      <td>0.722611</td>\n    </tr>\n    <tr>\n      <th>338</th>\n      <td>0.722479</td>\n    </tr>\n    <tr>\n      <th>339</th>\n      <td>0.722524</td>\n    </tr>\n  </tbody>\n</table>\n<p>340 rows × 1 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
    "source": [
-    "a = df.loc[:,'L0x']"
+    "a = df[['L0x']]\n",
+    "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +213,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-72-5e01a8442572>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mscaler\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mStandardScaler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mscaler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mscaler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-8-5e01a8442572>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mscaler\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mStandardScaler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mscaler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mscaler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/sklearn/preprocessing/_data.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y)\u001b[0m\n\u001b[1;32m    665\u001b[0m         \u001b[0;31m# Reset internal state before fitting\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    666\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 667\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpartial_fit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    668\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    669\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mpartial_fit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/sklearn/preprocessing/_data.py\u001b[0m in \u001b[0;36mpartial_fit\u001b[0;34m(self, X, y)\u001b[0m\n\u001b[1;32m    694\u001b[0m             \u001b[0mTransformer\u001b[0m \u001b[0minstance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    695\u001b[0m         \"\"\"\n\u001b[0;32m--> 696\u001b[0;31m         X = self._validate_data(X, accept_sparse=('csr', 'csc'),\n\u001b[0m\u001b[1;32m    697\u001b[0m                                 \u001b[0mestimator\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mFLOAT_DTYPES\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    698\u001b[0m                                 force_all_finite='allow-nan')\n",
       "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/sklearn/base.py\u001b[0m in \u001b[0;36m_validate_data\u001b[0;34m(self, X, y, reset, validate_separately, **check_params)\u001b[0m\n\u001b[1;32m    418\u001b[0m                     \u001b[0;34mf\"requires y to be passed, but the target y is None.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    419\u001b[0m                 )\n\u001b[0;32m--> 420\u001b[0;31m             \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mcheck_params\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    421\u001b[0m             \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    422\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
